# cuda-matmul

./: CMakeLists.txt  README.md  funcs_cuda.cu  funcs_cuda.cuh  main.cpp
